P4/S3/router_servidors/iptables.up.rules
# Generated by xtables-save v1.8.2 on Sat Jun 13 11:56:34 2020
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

#DNS
-A FORWARD -d 10.10.1.3,10.10.1.4 -p udp --dport 53 -j ACCEPT
-A FORWARD -s 10.10.1.3,10.10.1.4 -p udp --sport 53 -j ACCEPT
-A OUTPUT -p udp -d 10.10.1.3,10.10.1.4 --dport 53 -o enp0s3 -j ACCEPT
-A INPUT -p udp -s 10.10.1.3,10.10.1.4 --sport 53 -i enp0s3 -j ACCEPT


#ICMP
-A FORWARD -d 10.10.1.0/28,10.10.2.0/28,10.10.3.0/30,10.10.4.0/28,10.10.5.0/28 -p icmp -j ACCEPT
-A FORWARD -s 10.10.1.0/28,10.10.2.0/28,10.10.3.0/30,10.10.4.0/28,10.10.5.0/28 -p icmp -j ACCEPT
-A INPUT -d 10.10.2.2,10.10.3.2,10.10.5.1 -p icmp -j ACCEPT
-A OUTPUT -s 10.10.2.2,10.10.3.2,10.10.5.1 -p icmp -j ACCEPT

#DHCP
-A INPUT -p udp --dport 67 -j ACCEPT
-A OUTPUT -p udp --sport 67 -j ACCEPT
-A FORWARD -p udp -s 0.0.0.0 -d 255.255.255.255 --dport 67 -j ACCEPT
-A FORWARD -p udp -s 10.10.5.2 --sport 67 -d 0.0.0.0/0 -j ACCEPT

#SSH des de admin
-A INPUT -p tcp --dport 22 -s 10.10.2.0/28 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp --sport 22 -d 10.10.2.0/28 -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -p tcp --dport 22 -d 10.10.5.2 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD -p tcp --sport 22 -s 10.10.5.2 -m state --state ESTABLISHED -j ACCEPT
#SSH des de monitor de xarxa
-A INPUT -p tcp --dport 22 -s 10.10.5.11  -j ACCEPT
-A OUTPUT -p tcp --sport 22 -d 10.10.5.11 -j ACCEPT

COMMIT
# Completed on Sat Jun 13 11:56:34 2020
